# folder_flattener

./: Cargo.toml  README-ko.md  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs
tests/: integration_tests.rs
