[package]
name = "folder-flattener"
version = "0.1.0"
edition = "2021"
authors = ["cjnghn <chotnt741@gmail.com>"]
description = "A CLI tool to flatten directory structures while preserving file paths"
license = "MIT"
repository = "https://github.com/cjnghn/folder-flattener"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
ignore = "0.4"
anyhow = "1.0"
indicatif = "0.17"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.5"

[package.metadata.release]
sign-commit = true
sign-tag = true
push = true
publish = false
pre-release-commit-message = "Release version {{version}}"